@@ -10,8 +10,8 @@
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain: powerpack
  * Domain Path: /languages
- * Elementor tested up to: 3.7.1
- * Elementor Pro tested up to: 3.7.3
+ * Elementor tested up to: 3.7.4
+ * Elementor Pro tested up to: 3.7.5
  */
 
 if ( ! defined( 'ABSPATH' ) ) exit; // Exit if accessed directly
